feat: add @ApiAllowedRoles, add option to automatically scan security annotations for roles